Renaming service.html to journey.html
To better reflect the content of the journey HTML subpage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
 
 {{ partial "about.html" . }}
 
-{{ partial "service.html" . }}
+{{ partial "journey.html" . }}
 
 {{ partial "portfolio.html" . }}
 
