Renaming journey.html back to service.html

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
 
 {{ partial "about.html" . }}
 
-{{ partial "journey.html" . }}
+{{ partial "service.html" . }}
 
 {{ partial "portfolio.html" . }}
 
